Feature permission should be standard permission